Adding Visualization function and correcting ratio calculation of brightness

--- a/evaluation/CMakeLists.txt
+++ b/evaluation/CMakeLists.txt
@@ -69,6 +69,7 @@ add_executable(
 	TLinkage/MaxDiffOR.cpp
 	TLinkage/UniformSampler.cpp
 	TLinkage/DistBasedSampler.cpp
+	PointsVisualizer.cpp
 	FloodFill.cpp
 	Utilities.cpp
 	DBScan/DBScan.cpp
